--- a/src/index.html
+++ b/src/index.html
@@ -8,22 +8,19 @@
         <div class="row h-100">
             <div class="col-12 col-md-5 d-flex flex-column justify-content-start justify-content-md-center">
                 <div class="hero-section text-center text-md-start">
-                    <h1 class="mb-5 d-none d-md-block">Shop Now.<br>Pay Later.</h1>
+                    <h1 class="mb-5 d-none d-md-block">
+                        <span>Shop Now</span>.<br>
+                        <span class="fade-in-delay">Pay Later.</span>
+                    </h1>
                     <h1 class="my-4 d-md-none">Shop Now. Pay Later.</h1>
                 </div>
-                <div class="d-flex align-items-center position-relative d-md-none w-100 my-5">
-                    <div class="slider w-100">
-                        <div class="slider__item"><img src="assets/img/1.png" alt=""></div>
-                        <div class="slider__item"><img src="assets/img/2.png" alt=""></div>
-                        <div class="slider__item"><img src="assets/img/3.png" alt=""></div>
-                        <div class="slider__item"><img src="assets/img/4.png" alt=""></div>
-                    </div>
+                <div class="d-flex align-items-center position-relative d-md-none w-100 my-5" style="height: 270px;">
 
-                    <div class="hero-img">
-                        <img src="assets/img/bag-popping-out.png" alt="">
-                    </div>
+                    <figure class="hero-video">
+                        <video src="assets/video/card-slice-half.webm" autoplay muted></video>
+                    </figure>
                 </div>
-                <div class="hero-section text-center text-md-start mt-4 mt-md-0">
+                <div class="hero-section text-center text-md-start">
                     <h4 class="mp-text-dark-blue mb-4 mb-md-5">You can now shop at your favourite online store today
                         and pay
                         later using mintpay.</h4>
@@ -32,16 +29,10 @@
             </div>
 
             <div class="col-12 col-md-7 d-none d-md-flex align-items-center position-relative">
-                <div class="slider w-100">
-                    <div class="slider__item"><img src="assets/img/1.png" alt=""></div>
-                    <div class="slider__item"><img src="assets/img/2.png" alt=""></div>
-                    <div class="slider__item"><img src="assets/img/3.png" alt=""></div>
-                    <div class="slider__item"><img src="assets/img/4.png" alt=""></div>
-                </div>
 
-                <div class="hero-img">
-                    <img src="assets/img/bag-popping-out.png" alt="">
-                </div>
+                <figure class="hero-video">
+                    <video src="assets/video/card-slice-half.webm" autoplay muted></video>
+                </figure>
             </div>
         </div>
         <div class="d-none d-lg-flex justify-content-center w-100">
