--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,10 @@
                 <div class="d-flex align-items-center position-relative d-md-none w-100 my-5" style="height: 270px;">
 
                     <figure class="hero-video">
-                        <video src="assets/video/card-slice-half.webm" autoplay muted></video>
+                        <video autoplay muted preload="none" data-setup="{}">
+                            <source src="assets/video/card-slice-half.webm" type="video/webm; codecs=vp8, vorbis" />
+                            <source src="assets/video/card-slice-half.mp4" type="video/mp4" />
+                        </video>
                     </figure>
                 </div>
                 <div class="hero-section text-center text-md-start">
@@ -31,7 +34,10 @@
             <div class="col-12 col-md-7 d-none d-md-flex align-items-center position-relative">
 
                 <figure class="hero-video">
-                    <video src="assets/video/card-slice-half.webm" autoplay muted></video>
+                    <video autoplay muted preload="none" data-setup="{}">
+                        <source src="assets/video/card-slice-half.webm" type="video/webm; codecs=vp8, vorbis" />
+                        <source src="assets/video/card-slice-half.mp4" type="video/mp4" />
+                    </video>
                 </figure>
             </div>
         </div>
@@ -95,25 +101,25 @@
 <section class="split-section">
     <div class="container">
         <div class="row">
-            <div
-                class="col-12 col-lg-6 d-flex flex-column align-items-center align-items-lg-start justify-content-center text-center text-lg-start">
-                <h2 class="mp-text-dark-blue d-none d-lg-block mb-5" data-aos="fade-right" data-aos-offset="100"
-                    data-aos-duration="1000">Own your<br>online shopping<br>freedom</h2>
-                <h2 class="mp-text-dark-blue d-lg-none mb-4" data-aos="fade-right" data-aos-offset="100"
-                    data-aos-duration="1000">Own your online shopping freedom</h2>
-                <h4 class="mb-5 pe-lg-5" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000">Don't let
-                    low balance ruin your shopping experience. With mintpay, you can
-                    buy what you want-when you want it.</h4>
-                <a href="stores.html" class="mp-btn mp-btn--secondary" data-aos="fade-right" data-aos-offset="300"
-                    data-aos-duration="1000">Shop now</a>
-            </div>
             <div class="col-12 col-lg-6">
                 <div class="img-wrapper">
-                    <img src="assets/img/shopping-freedom.jpg" alt="" data-aos="fade-left" data-aos-offset="100"
+                    <img src="assets/img/shopping-freedom.png" alt="" data-aos="fade-right" data-aos-offset="100"
                         data-aos-duration="1000">
-                    <div class="dot-square" data-aos="zoom-in" data-aos-offset="0" data-aos-duration="2500"></div>
                 </div>
             </div>
+            <div
+                class="col-12 col-lg-6 d-flex flex-column align-items-center align-items-lg-start justify-content-center text-center text-lg-start">
+                <h2 class="mp-text-dark-blue d-none d-lg-block mb-5" data-aos="fade-left" data-aos-offset="100"
+                    data-aos-duration="1000">Own your<br>online shopping<br>freedom</h2>
+                <h2 class="mp-text-dark-blue d-lg-none mb-4" data-aos="fade-left" data-aos-offset="100"
+                    data-aos-duration="1000">Own your online shopping freedom</h2>
+                <h4 class="mb-5 pe-lg-5" data-aos="fade-left" data-aos-offset="200" data-aos-duration="1000">Don't let
+                    low balance ruin your shopping experience. With mintpay, you can
+                    buy what you want-when you want it.</h4>
+                <a href="stores.html" class="mp-btn mp-btn--secondary" data-aos="fade-left" data-aos-offset="210"
+                    data-aos-duration="1000">Shop now</a>
+            </div>
+            
         </div>
     </div>
 </section>
@@ -174,13 +180,20 @@
 <section class="logo-section">
     <div class="container">
         <div class="logo-slider">
-            <img class="px-4 px-md-5" src="assets/img/stripes-n-checkes.png" alt="">
-
-            <img class="px-4 px-md-5" src="assets/img/urban.png" alt="">
-
-            <img class="px-4 px-md-5" src="assets/img/iris-garden.png" alt="">
-
-            <img class="px-4 px-md-5" src="assets/img/zigma-jones.png" alt="">
+            <img class="px-4 px-md-5" src="assets/img/stores/logos/strips.png" alt="">
+            <img class="px-4 px-md-5" src="assets/img/stores/logos/urbanlk.png" alt="">
+            <img class="invert-color px-4 px-md-5" src="assets/img/stores/logos/iris-garden.png" alt="">
+            <img class="invert-color px-4 px-md-5" src="assets/img/stores/logos/zigmajones.png" alt="">
+            <img class="px-4 px-md-5" src="assets/img/stores/logos/ekko.png" alt="">
+            <img class="px-4 px-md-5" src="assets/img/stores/logos/emaan.png" alt="">
+            <img class="invert-color px-4 px-md-5" src="assets/img/stores/logos/FOA.png" alt="">
+            <img class="px-4 px-md-5" src="assets/img/stores/logos/glitteray.png" alt="">
+            <img class="px-4 px-md-5" src="assets/img/stores/logos/prime_culture.png" alt="">
+            <img class="px-4 px-md-5" src="assets/img/stores/logos/spa.png" alt="">
+            <img class="px-4 px-md-5" src="assets/img/stores/logos/thirteen.png" alt="">
+            <img class="px-4 px-md-5" src="assets/img/stores/logos/zigzag.png" alt="">
+            <img class="px-4 px-md-5" src="assets/img/stores/logos/clubhouse.png" alt="">
+            <img class="px-4 px-md-5" src="assets/img/stores/logos/dilfer.png" alt="">
         </div>
     </div>
 </section>
