--- a/src/partner-with-us.html
+++ b/src/partner-with-us.html
@@ -25,16 +25,15 @@
                     customers more flexibility and increases their purchase power.</h4>
             </div>
             <div class="col-12 col-lg-6">
-                <div class="img-wrapper">
-                    <img src="assets/img/shopping.jpg" alt="">
-                    <div class="dot-square"></div>
+                <div class="img-wrapper justify-content-lg-end">
+                    <img src="assets/img/shopping.png" alt="">
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<section class="how-to-section">
+<section class="how-to-section mt-0">
     <div class="container-fluid">
         <div class="header-text text-center">
             <h2 class="mp-text-dark-blue mb-5">How it works</h2>
