Logo slider changed

--- a/src/index.html
+++ b/src/index.html
@@ -178,7 +178,7 @@
 </section>
 
 <section class="logo-section">
-    <div class="container">
+    <div class="container-fluid">
         <div class="logo-slider">
             <img class="px-4 px-md-5" src="assets/img/stores/logos/strips.png" alt="">
             <img class="px-4 px-md-5" src="assets/img/stores/logos/urbanlk.png" alt="">
