--- a/src/index.html
+++ b/src/index.html
@@ -17,24 +17,24 @@
                 <div class="d-flex align-items-center position-relative d-md-none w-100 my-5" style="height: 270px;">
 
                     <figure class="hero-video">
-                        <video autoplay muted preload="none" data-setup="{}">
+                        <video autoplay muted preload="none" defaultMuted playsinline data-setup="{}">
                             <source src="assets/video/card-slice-half.webm" type="video/webm; codecs=vp8, vorbis" />
                             <source src="assets/video/card-slice-half.mp4" type="video/mp4" />
                         </video>
                     </figure>
                 </div>
                 <div class="hero-section text-center text-md-start">
-                    <h4 class="mp-text-dark-blue mb-4 mb-md-5">You can now shop at your favourite online store today
+                    <h4 class="mp-text-dark-blue mb-4 mb-md-5 fade-in-delay delay-1">You can now shop at your favourite online store today
                         and pay
                         later using mintpay.</h4>
-                    <a class="mp-btn" href="stores.html">Shop now</a>
+                    <a class="mp-btn fade-in-delay delay-2" href="stores.html">Shop now</a>
                 </div>
             </div>
 
             <div class="col-12 col-md-7 d-none d-md-flex align-items-center position-relative">
 
                 <figure class="hero-video">
-                    <video autoplay muted preload="none" data-setup="{}">
+                    <video autoplay muted preload="none" defaultMuted playsinline data-setup="{}">
                         <source src="assets/video/card-slice-half.webm" type="video/webm; codecs=vp8, vorbis" />
                         <source src="assets/video/card-slice-half.mp4" type="video/mp4" />
                     </video>
