--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
                         <span>Shop Now</span>.<br>
                         <span class="fade-in-delay">Pay Later.</span>
                     </h1>
-                    <h1 class="my-4 d-md-none">Shop Now. Pay Later.</h1>
+                    <h1 class="my-4 d-md-none">Shop Now.  <span class="fade-in-delay">Pay Later.</span></h1>
                 </div>
-                <div class="d-flex align-items-center position-relative d-md-none w-100 my-5" style="height: 270px;">
+                <div class="d-flex align-items-center position-relative d-md-none w-100" style="height: 270px;">
 
                     <figure class="hero-video">
                         <video autoplay muted preload="none" defaultMuted playsinline data-setup="{}">
