Press page added

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
     
 </section>
 
-<section class="how-it-works-section">
+<section class="how-it-works-section padding-6-t-b">
     <div class="container">
         <div class="header-text-block text-center">
             <h2 class="mp-text-dark-blue mb-4" data-aos="fade-down">How it works</h2>
@@ -79,7 +79,7 @@
         </div>
     </div>
 </section>
-<section class="banner-section black-gradient">
+<section class="banner-section black-gradient padding-6-t-b">
     <div class="container text-center">
         <div class="three-text-line d-flex flex-column flex-sm-row align-items-center justify-content-center flex-wrap">
             <h2 class="mp-text-light" data-aos="zoom-in" data-aos-offset="100" data-aos-duration="1000">No interest</h2>
@@ -98,7 +98,7 @@
         <a class="mp-btn" href="#" data-aos="fade-up" data-aos-offset="350" data-aos-duration="1000">Sign up now</a>
     </div>
 </section>
-<section class="split-section">
+<section class="split-section padding-6-t-b">
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-6">
@@ -123,7 +123,7 @@
         </div>
     </div>
 </section>
-<section class="testimonial-section">
+<section class="testimonial-section padding-6-t-b">
     <div class="container">
         <h4 class="mp-text-dark-blue text-center">Our customers’ feedback are what we value the most</h4>
         <div class="testimonial-slider mt-4">
@@ -165,7 +165,7 @@
     </div>
 </section>
 
-<section class="banner-section blue-gradient">
+<section class="banner-section blue-gradient padding-6-t-b">
     <div class="container text-center">
         <h2 class="mp-text-light mb-4" data-aos="fade-down" data-aos-duration="1000">Have a business and<br>want to sell
             with Mintpay?</h2>
@@ -177,7 +177,7 @@
     </div>
 </section>
 
-<section class="logo-section">
+<section class="logo-section padding-6-t-b">
     <div class="container-fluid">
         <div class="logo-slider">
             <img class="rectangular-logo px-4 px-md-5" src="assets/img/stores/logos/strips.png" alt="">
