--- a/src/partner-with-us.html
+++ b/src/partner-with-us.html
@@ -10,7 +10,7 @@
     </div>
 </section>
 
-<section class="split-section">
+<section class="split-section padding-6-t-b">
     <div class="container">
         <div class="row">
             <div
@@ -33,7 +33,7 @@
     </div>
 </section>
 
-<section class="how-to-section mt-0">
+<section class="how-to-section mt-0 padding-6-t-b">
     <div class="container-fluid">
         <div class="header-text text-center">
             <h2 class="mp-text-dark-blue mb-5">How it works</h2>
@@ -65,7 +65,7 @@
     </div>
 </section>
 
-<section class="integration-section">
+<section class="integration-section padding-6-t-b">
     <div class="container">
         <div class="text-center">
             <h2 class="font-weight-semibold mb-4">Seamlessly integrate with your store</h2>
@@ -189,7 +189,7 @@
      }
 </script>
 
-<section class="partner-form-section">
+<section class="partner-form-section padding-6-t-b">
     <div class="container">
         <h2 class="text-light mb-4 font-weight-semibold text-center">Write to us</h2>
         <h4 class="text-light text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum non
