--- a/src/support.html
+++ b/src/support.html
@@ -10,7 +10,7 @@
     </div>
 </section>
 
-<section class="faq-section">
+<section class="faq-section padding-6-t-b">
     <div class="container">
         <div class="question-block">
             <div class="question-block__title">Getting started with mintpay</div>
