--- a/src/stores.html
+++ b/src/stores.html
@@ -49,9 +49,11 @@
             <div class="store-block">
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/thirteen31.png" alt="">
+                        <img src="assets/img/stores/spa-ceylon.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://www.thirteen31.com/" target="_blank">View store</a>
+                            <a href="https://lk.spaceylon.com/" target="_blank">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/spa.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <h5 class="store-title mt-3">SPA CEYLON</h5>
@@ -61,7 +63,9 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/zigzag.jpg" alt="">
                         <div class="store-link">
-                            <a href="http://zigzag.lk" target="_blank">View store</a>
+                            <a href="http://zigzag.lk" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <h5 class="store-title mt-3">ZIGZAG</h5>
@@ -71,7 +75,9 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/zigma-jones.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://zigmajones.com/" target="_blank">View store</a>
+                            <a href="https://zigmajones.com/" target="_blank">
+                                <img class="rectangular-logo" src="assets/img/stores/logos/zigmajones.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <h5 class="store-title mt-3">Zigma Jones</h5>
@@ -81,7 +87,9 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/stripes-checks.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://stripesandchecksinc.com/" target="_blank">View store</a>
+                            <a href="https://stripesandchecksinc.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/strips.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <h5 class="store-title mt-3">Stripes & Checks Inc</h5>
@@ -105,9 +113,11 @@
             <div class="store-block">
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/zigma-jones.jpg" alt="">
+                        <img src="assets/img/stores/ekko.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://zigmajones.com/" target="_blank">View store</a>
+                            <a href="https://zigmajones.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/ekko.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <h5 class="store-title mt-3">EKKO</h5>
@@ -117,17 +127,21 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/thirteen31.png" alt="">
                         <div class="store-link">
-                            <a href="https://www.thirteen31.com/" target="_blank">View store</a>
+                            <a href="https://www.thirteen31.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/thirteen.png" alt="">
+                            </a>
                         </div>
                     </div>
-                    <h5 class="store-title mt-3">1331</h5>
+                    <h5 class="store-title mt-3">Thirteen 31</h5>
                 </div>
 
                 <div class="store-block__item">
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/zigzag.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://www.foaclothing.com/" target="_blank">View store</a>
+                            <a href="https://www.foaclothing.com/" target="_blank">
+                                <img class="rectangular-logo" src="assets/img/stores/logos/FOA.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <h5 class="store-title mt-3">F.O.A</h5>
@@ -135,9 +149,11 @@
 
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/stripes-checks.jpg" alt="">
+                        <img src="assets/img/stores/will-by-zac.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://stripesandchecksinc.com/" target="_blank">View store</a>
+                            <a href="https://willbyzac.com/" target="_blank">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/will-by-zac.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <h5 class="store-title mt-3">Will by Zac</h5>
