UI changes and additions

--- a/src/featured.html
+++ b/src/featured.html
@@ -28,7 +28,9 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/zigzag.jpg" alt="">
                         <div class="store-link">
-                            <a href="http://zigzag.lk" target="_blank">View store</a>
+                            <a href="http://zigzag.lk" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <h5 class="store-title mt-3">ZIGZAG</h5>
@@ -38,7 +40,9 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/zigma-jones.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://zigmajones.com/" target="_blank">View store</a>
+                            <a href="https://zigmajones.com/" target="_blank">
+                                <img class="rectangular-logo" src="assets/img/stores/logos/zigmajones.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <h5 class="store-title mt-3">Zigma Jones</h5>
@@ -48,7 +52,9 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/thirteen31.png" alt="">
                         <div class="store-link">
-                            <a href="https://www.thirteen31.com/" target="_blank">View store</a>
+                            <a href="https://www.thirteen31.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/thirteen.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <h5 class="store-title mt-3">Thirteen Thirty One</h5>
@@ -58,7 +64,9 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/stripes-checks.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://stripesandchecksinc.com/" target="_blank">View store</a>
+                            <a href="https://stripesandchecksinc.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/strips.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <h5 class="store-title mt-3">Stripes & Checks Inc</h5>
@@ -68,7 +76,9 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/ekko.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://www.ekko.style/" target="_blank">View store</a>
+                            <a href="https://www.ekko.style/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/ekko.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <h5 class="store-title mt-3">Ekko</h5>
@@ -78,7 +88,9 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/glitteray.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://www.glitterayjewellery.com/" target="_blank">View store</a>
+                            <a href="https://www.glitterayjewellery.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/glitteray.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <h5 class="store-title mt-3">Glitteray</h5>
@@ -88,10 +100,72 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/iris-garden.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://irisgarden.lk//" target="_blank">View store</a>
+                            <a href="https://irisgarden.lk/" target="_blank">
+                                <img class="square-logo" src="assets/img/stores/logos/iris-garden.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <h5 class="store-title mt-3">Iris Garden</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/urban.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://urban.lk/" target="_blank">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/urbanlk.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Urban</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/dilfer.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://www.dilferclothing.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/dilfer.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Dilfer</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/emaan.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://www.emaanqirat.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/emaan.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Emaan Qirat</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/prime-culture.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://primeculture.co/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/prime_culture.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Prime Culture</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/clubhouse.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://www.clubhousevivaldi.com/" target="_blank">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/clubhouse.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Clubhouse Vivaldi</h5>
                 </div>
             </div>
         </div>
