--- a/src/partner-with-us.html
+++ b/src/partner-with-us.html
@@ -26,7 +26,7 @@
             </div>
             <div class="col-12 col-lg-6">
                 <div class="img-wrapper justify-content-lg-end">
-                    <img src="assets/img/shopping.png" alt="">
+                    <img class="mt-5 mt-lg-0 mb-0" src="assets/img/shopping.png" alt="">
                 </div>
             </div>
         </div>
