--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,14 @@
                 <div class="d-flex align-items-center position-relative d-md-none w-100" style="height: 270px;">
 
                     <figure class="hero-video">
-                        <video autoplay muted preload="none" defaultMuted playsinline data-setup="{}">
+                        <video autoplay muted preload="none" defaultMuted playsinline data-setup="{}" poster="assets/video/card-slice-half.png">
                             <source src="assets/video/card-slice-half.webm" type="video/webm; codecs=vp8, vorbis" />
                             <source src="assets/video/card-slice-half.mp4" type="video/mp4" />
                         </video>
                     </figure>
                 </div>
-                <div class="hero-section text-center text-md-start">
-                    <h4 class="mp-text-dark-blue mb-4 mb-md-5 fade-in-delay delay-1">You can now shop at your favourite online store today
+                <div class="hero-section text-center text-md-start mt-5 mt-md-0">
+                    <h4 class="mp-text-dark-blue mt-5 mt-md-0 mb-4 mb-md-5 fade-in-delay delay-1">You can now shop at your favourite online store today
                         and pay
                         later using mintpay.</h4>
                     <a class="mp-btn fade-in-delay delay-2" href="stores.html">Shop now</a>
@@ -34,7 +34,7 @@
             <div class="col-12 col-md-7 d-none d-md-flex align-items-center position-relative">
 
                 <figure class="hero-video">
-                    <video autoplay muted preload="none" defaultMuted playsinline data-setup="{}">
+                    <video autoplay muted preload="none" defaultMuted playsinline data-setup="{}" poster="assets/video/card-slice-half.png">
                         <source src="assets/video/card-slice-half.webm" type="video/webm; codecs=vp8, vorbis" />
                         <source src="assets/video/card-slice-half.mp4" type="video/mp4" />
                     </video>
@@ -98,7 +98,7 @@
         <a class="mp-btn" href="#" data-aos="fade-up" data-aos-offset="350" data-aos-duration="1000">Sign up now</a>
     </div>
 </section>
-<section class="split-section padding-6-t-b">
+<section class="split-section padding-6-t-b pb-0">
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-6">
@@ -126,7 +126,7 @@
 <section class="testimonial-section padding-6-t-b">
     <div class="container">
         <h4 class="mp-text-dark-blue text-center">Our customers’ feedback are what we value the most</h4>
-        <div class="testimonial-slider mt-4">
+        <div class="testimonial-slider mt-3">
             <div class="testimonial">
                 <div class="testimonial__text px-md-5">“Very convenient and stress free. Highly recommended.” -
                     Giesyl Ann</div>
